# microbit-v2-moisture-sensor

./: .gitmodules  README.md
embedded-sensor/: .gitignore
embedded-sensor/microbit-v2-moisture-sensor/: Cargo.toml  memory.x
embedded-sensor/microbit-v2-moisture-sensor/.cargo/: config.toml
embedded-sensor/s140_nrf52_7.3.0/: flash.sh
monitoring/: .gitignore  start-grafana.sh  start-prometheus.sh
monitoring/prometheus/: config.yml
sensor-exporter/: .gitignore  Cargo.toml
sensor-exporter/src/: main.rs
