[package]
name = "sensor-exporter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
btleplug = { version = "0.10.*"}
uuid = "1.3.3"
rand = "0.8.5"
futures = "0.3.28"
pretty_env_logger = "0.5.0"
prometheus_exporter = "0.8.5"
